AC_INIT(configure.in)
AC_CANONICAL_SYSTEM


AM_CONFIG_HEADER(config.h)


AM_INIT_AUTOMAKE(libmx, 0.4)
AM_PROG_AS
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl KDE_FIND_PATH(programm-name, variable-name, list of directories,
dnl     if-not-found, test-parameter)
AC_DEFUN(KDE_FIND_PATH,
[
   AC_MSG_CHECKING([for $1])
   if test -n "$$2"; then
        kde_cv_path="$$2";
   else
        kde_cache=`echo $1 | sed 'y%./+-%__p_%'`

        AC_CACHE_VAL(kde_cv_path_$kde_cache,
        [
        kde_cv_path="NONE"
        dirs="$3"
        kde_save_IFS=$IFS
        IFS=':'
        for dir in $PATH; do
          dirs="$dirs $dir"
        done
        IFS=$kde_save_IFS

        for dir in $dirs; do
          if test -x "$dir/$1"; then
            if test -n "$5"
            then
              evalstr="$dir/$1 $5 2>&1 "
              if eval $evalstr; then
                kde_cv_path="$dir/$1"
                break
              fi
            else
                kde_cv_path="$dir/$1"
                break
            fi
          fi
        done

        eval "kde_cv_path_$kde_cache=$kde_cv_path"

        ])

      eval "kde_cv_path=\"`echo '$kde_cv_path_'$kde_cache`\""

   fi

   if test -z "$kde_cv_path" || test "$kde_cv_path" = NONE; then
      AC_MSG_RESULT(not found)
      $4
   else
      AC_MSG_RESULT($kde_cv_path)
      $2=$kde_cv_path

   fi
])

KDE_FIND_PATH(sdl-config, LIBSDL_CONFIG, [${prefix}/bin ${exec_prefix}/bin ], [
  AC_MSG_WARN([Could not find libsdl anywhere, check http://www.sdl.org])
])

if test -n "$LIBSDL_CONFIG"; then
     LIBSDL_LIBS="-L${prefix}/lib `$LIBSDL_CONFIG --static-libs`"
     LIBSDL_RPATH=
     for args in $LIBSDL_LIBS; do
          case $args in
            -L*)
               LIBSDL_RPATH="$LIBSDL_RPATH $args"
               ;;
          esac
     done
     LIBSDL_RPATH=`echo $LIBSDL_RPATH | sed -e "s/-L/-R/g"`
     LIBSDL_CFLAGS="`$LIBSDL_CONFIG --cflags` -I${prefix}/include"

     AC_DEFINE_UNQUOTED(HAVE_LIBSDL, 1, [Defines if your system has the LIBSDL library])
fi

AC_SUBST(LIBSDL_LIBS)
AC_SUBST(LIBSDL_CFLAGS)
AC_SUBST(LIBSDL_RPATH)

case "${target}" in

*darwin*|*apple*)
fastSOURCE="Darwin"
fastDIR="x64"
PLATFORMZ="-framework OpenGL"
AC_DEFINE_UNQUOTED(DARWIN, 1, [darwin])
;;

x86_64*linux*)
fastSOURCE="linux x64"
fastDIR="x64"
PLATFORMZ="-lGL -lGLU"
;;

*86*linux*)
fastSOURCE="linux"
fastDIR="fast"
PLATFORMZ="-lGL -lGLU"
;;
*mingw32*|*cygwin)
fastSOURCE="windows"
fastDIR="fast_w32"
# staticly compiled libz
PLATFORMZ="-no-undefined  -lwsock32 -lopengl32 -lglu32  -lSDL -lz -lpng12  -ljpeg"
WINPLAT="-lwsock32"
;;
#powerpc*)
#fastSOURCE="powerpc"
#fastDIR="x64"
#PLATFORMZ="-lGL -lGLU"
#AC_DEFINE_UNQUOTED(SYSTEM_PS3, 1, [ps3])
#;;

esac


AC_SUBST(PLATFORMZ)

AC_OUTPUT(Makefile ump3d/Makefile)

